# emsrogyo

./: Makefile  Makefile.in  README.md  bootstrap  config.h  config.h.in  config.status  configure  configure.ac
src/: Makefile  Makefile.am  Makefile.in
src/Common/: INIFile.cpp  INIFile.h
src/DMARCXmlParser/: CDMARCFunctions.cpp  CDMARCFunctions.h  CDMARCLog.cpp  CDMARCLog.h  CDMARCMysql.cpp  CDMARCMysql.h  CDMARCXmlParser.cpp  CDMARCXmlParser.h  CDMARCXmlParserConfig.cpp  CDMARCXmlParserConfig.h  CDMARCXmlParserThread.cpp  CDMARCXmlParserThread.h  DMARCDefineHeader.h  DMARCDefineString.h  DMARCXmlParserMain.cpp  Makefile  Makefile.am  Makefile.in  ReleaseNote.txt  dmarcxmlparser.ini  testHeader.h
src/EmsServer/: EmsAgentMain.cpp  EmsAgentServer.cpp  EmsAgentServer.h  EmsClient.cpp  EmsClient.h  EmsCommon.h  EmsConfig.cpp  EmsConfig.h  EmsDKIM.cpp  EmsDKIM.h  EmsDbCommonQThread.cpp  EmsDbCommonQThread.h  EmsDbThread.cpp  EmsDbThread.h  EmsDefine.cpp  EmsDefine.h  EmsDefineString.h  EmsDomainListSet.cpp  EmsDomainListSet.h  EmsLog.cpp  EmsLog.h  EmsMX.cpp  EmsMX.h  EmsMXManager.cpp  EmsMXManager.h  EmsMain.cpp  EmsMysql.cpp  EmsMysql.h  EmsQProcThread.cpp  EmsQProcThread.h  EmsQueue.cpp  EmsQueue.h  EmsRMQConnect.cpp  EmsRMQConnect.h  EmsRMQManager.cpp  EmsRMQManager.h  EmsRequest.h  EmsStructDefine.h  EmsThread.cpp  EmsThread.h  (+20 more)
src/EmsServer/amqpcpp-master/: Makefile  Makefile.org
src/EmsServer/amqpcpp-master/examples/: example_consume.cpp  example_consume.cpp.mod  example_consume.cpp.mod2  example_get.cpp  example_publish.cpp  example_publish.cpp.mod
src/EmsServer/amqpcpp-master/include/: AMQPcpp.h
src/EmsServer/amqpcpp-master/src/: AMQP.cpp  AMQPExchange.cpp  AMQPMessage.cpp  AMQPQueue.cpp
src/EmsServer/ini/: IEmsAgent.ini  IEmsServer.ini  ResendMail_neoems.php  TaxDbUpdate_neoems.php  create_neoems_DBTable.php  iEmsDomainList.txt
src/Libgabia/inc/: libgabia.h  sth_list.h  sth_misc.h  sth_mysql.h  sth_network.h  sth_string.h  sth_syslog.h  sth_wrapini.h
src/Libgabia/src/: Makefile  sth_list.c  sth_misc.c  sth_mysql.c  sth_network.c  sth_string.c  sth_syslog.c
src/NetTemplate/: CClient.cpp  CClient.h  CClientEpoll.cpp  CClientEpoll.h  CClientList.h  CClientUdp.cpp  CClientUdp.h  CConnectTest.cpp  CHashTest.cpp  CJSEngine.cpp  CJSEngine.h  CMonitor.h  CMultiServer.h  CMultiServerEpoll.h  CMultiServerEpollTest.cpp  CMultiServerEpollTest2.cpp  CMultiServerTest.cpp  CMultiServerTest2.cpp  CMyRequest.cpp  CMyRequest.h  CMyServer.cpp  CMyServer.h  CMyThread.cpp  CMyThread.h  CMysql.cpp  CMysql.h  CRemoveList.cpp  CRemoveList.h  CRequest.h  CResolver.cpp  CResolver.h  CResolverTest.cpp  CSendPacket.cpp  CSendPacket.h  CSendQueue.cpp  CSendQueue.h  CServer.h  CServerEpoll.h  CServerEpollTest.cpp  CServerExt.h  (+34 more)
